# sommercamp22-curricula

./: .env  .gitignore  README.md  docker-compose.yml  import-concepts-and-schemes.sh
cocoda/: docker-compose.yml
cocoda/config/: cocoda.json  config.json
curriculum_api/: .vimspector.json  Session.vim  start.sh
curriculum_api/src/: pyproject.toml
curriculum_api/src/curriculum_api/: get_mappings.py  insert_data.py  jskos.py  main.py
curriculum_api/tests/: test_curriculum_api.py  test_jskos.py
data_loader/: Dockerfile  load_data.py
data_loader/data/: bayern-mathe-9.ttl  data.ttl  mathe_sub_graph.ttl  rlp-bio-7-9-10-concepts.ndjson  rlp-bio-7-9-10-scheme.json  rlp-mathe-7-8-concepts.ndjson  rlp-mathe-7-8-scheme.json  rlp-mathe-7-8.ttl  wlo-fachportal-concepts.ndjson  wlo-fachportal-scheme.json
example_data/: bayern-mathe-6-scheme.json  bayern-mathe-6.ttl
jskos-server/: docker-compose.yml  import-concepts-and-schemes.sh
jskos-server/data/config/: config.json
jskos-server/data/db/: WiredTiger.wt  (+68 more)
jskos-server/imports/: b-w-mathe-6-concepts.ndjson  b-w-mathe-6-scheme.json  b-w-mathe-6.ttl  bayern-mathe-6-concepts.ndjson  bayern-mathe-9-concepts.ndjson  bayern-mathe-9-scheme.json  mathe_sub_graph.ttl  rlp-mathe-7-8-concepts.ndjson  rlp-mathe-7-8-scheme.json  skos_131_biologie_7_9_10.ttl  skos_186_mathematik_7_8.ttl
oeh-triple-store/: Dockerfile  README.md  assembler_inferencing.ttl  docker-compose.yml  docker-entrypoint.sh  fuseki-config.ttl
oeh-triple-store/data/: myrules.rules  reasoning-skos-exactMatch.ttl
oeh-triple-store/queries/: test_data.rq
(+13 files in other folders)
