[tool.poetry]
name = "curriculum_api"
version = "0.1.0"
description = ""
authors = ["@s.roertgen <sroertgen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
rdflib = "^6.2.0"
fastapi = "^0.79.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
requests = "^2.28.1"
pylint = "^2.14.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]
